# Mental-Health-Chatbot-Backend

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  minimal_test.py  orchestrator.py  otel-collector-config.yaml  output.txt  pyproject.toml  rag_config.json  results.txt  results.xml  start.sh  telemetry.py  train_models.py
.github/workflows/: ci-cd.yml
app/: axiom_client.py
models/: language_detection_pipeline.pkl
models/emotion_model/: config.json  model.safetensors
modules/: emotion_classifier.py  guardrails.py  intent_classifier.py  language_detector.py  rag_pipeline.py  translator.py
tests/: test_classifiers.py  test_endpoints.py  test_rag.py
