[project]
name = "rag-based-mental-health-support-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.21.0",
    "datasets>=4.8.5",
    "deep-translator>=1.11.4",
    "dotenv>=0.9.9",
    "evaluate>=0.4.6",
    "fastapi[standard]>=0.136.3",
    "groq>=0.13.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-groq==0.2.0",
    "langchain-huggingface==0.1.0",
    "langchain-qdrant==0.1.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "qdrant-client==1.11.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers==3.1.1",
    "torch>=2.12.0",
    "transformers==4.44.2",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "pytest-asyncio>=1.4.0",
    "pytest>=9.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # errors, pyflakes, warnings, isort
ignore = ["E501"]                # line too long — handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
