[project]
name = "rag-based-mental-health-support-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "groq",
    "httpx",
    "jinja2",
    "joblib",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "langchain-groq==0.2.0",
    "langchain-qdrant==0.1.4",
    "qdrant-client==1.11.3",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "scikit-learn==1.8.0",
    "fastembed>=0.4.2",
    "python-dotenv>=1.2.2",
    "langchain-huggingface>=0.2.0",
    "deep-translator>=1.11.4",
    "torch==2.2.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true